force-app/main/default/objects/Sales_Order__c/Sales_Order__c.object-meta.xml
<CustomObject>
    <label>Sales Order</label>
    <nameField>
        <displayFormat>SO-{00000}</displayFormat>
        <label>SO ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Sales Order</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>