force-app/main/default/objects/Sales_Order__c/fields/Agent_2nd__c.field-meta.xml
<CustomField>
    <fullName>Agent_2nd__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Agent (2nd)</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Sales Order (Agent (2nd))</relationshipLabel>
    <relationshipName>Sales_Order2</relationshipName>
    <type>Lookup</type>
</CustomField>