force-app/main/default/objects/Sales_Order__c/fields/Agent__c.field-meta.xml
<CustomField>
    <fullName>Agent__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Agent</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Sales Order (Agent)</relationshipLabel>
    <relationshipName>Sales_Order1</relationshipName>
    <type>Lookup</type>
</CustomField>