force-app/main/default/objects/Sales_Order__c/fields/AirType__c.field-meta.xml
<CustomField>
    <fullName>AirType__c</fullName>
    <label>Air Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Air Cargo</fullName>
            </value>
            <value>
                <fullName>Air Express</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>