force-app/main/default/objects/Sales_Order__c/fields/ApplyTax__c.field-meta.xml
<CustomField>
    <fullName>ApplyTax__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Apply Tax?</label>
    <type>Checkbox</type>
</CustomField>