force-app/main/default/objects/Sales_Order__c/fields/Approved_date__c.field-meta.xml
<CustomField>
    <fullName>Approved_date__c</fullName>
    <label>Approved date</label>
    <type>Date</type>
</CustomField>