force-app/main/default/objects/Sales_Order__c/fields/Booking_ID__c.field-meta.xml
<CustomField>
    <fullName>Booking_ID__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Booking ID</label>
    <referenceTo>EBooking__c</referenceTo>
    <relationshipName>SI</relationshipName>
    <type>Lookup</type>
</CustomField>