force-app/main/default/objects/Sales_Order__c/fields/Booking_No__c.field-meta.xml
<CustomField>
    <fullName>Booking_No__c</fullName>
    <formula>Booking_ID__r.Master_Booking_No__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Booking No</label>
    <type>Text</type>
</CustomField>