force-app/main/default/objects/Sales_Order__c/fields/Cargo_unit__c.field-meta.xml
<CustomField>
    <fullName>Cargo_unit__c</fullName>
    <label>Cargo unit</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>CargoUnit</valueSetName>
    </valueSet>
</CustomField>