force-app/main/default/objects/Sales_Order__c/fields/Carrier_Airliner_Vendor__c.field-meta.xml
<CustomField>
    <fullName>Carrier_Airliner_Vendor__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Carrier/Airliner/Vendor</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Sales Order (Carrier/Airliner/Vendor)</relationshipLabel>
    <relationshipName>Sales_Order</relationshipName>
    <type>Lookup</type>
</CustomField>