force-app/main/default/objects/Sales_Order__c/fields/Commodity__c.field-meta.xml
<CustomField>
    <fullName>Commodity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Commodity</label>
    <referenceTo>Commodity__c</referenceTo>
    <relationshipName>SI</relationshipName>
    <type>Lookup</type>
</CustomField>