force-app/main/default/objects/Sales_Order__c/fields/Compare_profit__c.field-meta.xml
<CustomField>
    <fullName>Compare_profit__c</fullName>
    <formula>IF ((TotalSellingInclTaxActual__c-TotalAmountofBuyingActual__c  ) &lt;=0.05* TotalSellingInclTaxActual__c &amp;&amp; TotalSellingInclTaxActual__c  &lt;&gt; 0  &amp;&amp; TotalAmountofBuyingActual__c &lt;&gt; 0  , TRUE, FALSE)</formula>
    <label>Compare profit</label>
    <type>Checkbox</type>
</CustomField>