force-app/main/default/objects/Sales_Order__c/fields/Consignee__c.field-meta.xml
<CustomField>
    <fullName>Consignee__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Consignee</label>
    <referenceTo>Account</referenceTo>
    <relationshipName>SI1</relationshipName>
    <type>Lookup</type>
</CustomField>