force-app/main/default/objects/Sales_Order__c/fields/ContainerType3__c.field-meta.xml
<CustomField>
    <fullName>ContainerType3__c</fullName>
    <label>Container Type 3</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>TransportationWay__c</controllingField>
        <restricted>true</restricted>
        <valueSetName>ContainerType</valueSetName>
    </valueSet>
</CustomField>