force-app/main/default/objects/Sales_Order__c/fields/CreateCustomClearance__c.field-meta.xml
<CustomField>
    <fullName>CreateCustomClearance__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Create Custom Clearance?</label>
    <type>Checkbox</type>
</CustomField>