force-app/main/default/objects/Sales_Order__c/fields/CreateTrucking__c.field-meta.xml
<CustomField>
    <fullName>CreateTrucking__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Create Trucking?</label>
    <type>Checkbox</type>
</CustomField>