force-app/main/default/objects/Sales_Order__c/fields/CustomerNameFormula__c.field-meta.xml
<CustomField>
    <fullName>CustomerNameFormula__c</fullName>
    <formula>Customer__r.Name</formula>
    <label>Customer Name Formula</label>
    <type>Text</type>
</CustomField>