force-app/main/default/objects/Sales_Order__c/fields/Description_of_Goods__c.field-meta.xml
<CustomField>
    <fullName>Description_of_Goods__c</fullName>
    <label>Description of Goods</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>