force-app/main/default/objects/Sales_Order__c/fields/DIM_Dimension__c.field-meta.xml
<CustomField>
    <fullName>DIM_Dimension__c</fullName>
    <label>DIM (Dimension)</label>
    <type>TextArea</type>
</CustomField>