force-app/main/default/objects/Sales_Order__c/fields/Housse_Freight_Collect_Prepaid__c.field-meta.xml
<CustomField>
    <fullName>Housse_Freight_Collect_Prepaid__c</fullName>
    <label>Housse Freight Collect/Prepaid</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Freight Collected</fullName>
            </value>
            <value>
                <fullName>Freight Prepaid</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>