force-app/main/default/objects/Sales_Order__c/fields/Housse_Notify_Party__c.field-meta.xml
<CustomField>
    <fullName>Housse_Notify_Party__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Housse Notify Party</label>
    <referenceTo>Account</referenceTo>
    <relationshipName>SI2</relationshipName>
    <type>Lookup</type>
</CustomField>