force-app/main/default/objects/Sales_Order__c/fields/HS_Code__c.field-meta.xml
<CustomField>
    <fullName>HS_Code__c</fullName>
    <label>HS Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>