force-app/main/default/objects/Sales_Order__c/fields/INCOTERMS__c.field-meta.xml
<CustomField>
    <fullName>INCOTERMS__c</fullName>
    <label>INCOTERMS</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Incoterm</valueSetName>
    </valueSet>
</CustomField>