force-app/main/default/objects/Sales_Order__c/fields/Measurement_CBM__c.field-meta.xml
<CustomField>
    <fullName>Measurement_CBM__c</fullName>
    <label>Measurement (CBM)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>