force-app/main/default/objects/Sales_Order__c/fields/P_O_D_A_O_A__c.field-meta.xml
<CustomField>
    <fullName>P_O_D_A_O_A__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>P.O.D(A.O.A)</label>
    <referenceTo>PortCode__c</referenceTo>
    <relationshipName>SI2</relationshipName>
    <type>Lookup</type>
</CustomField>