force-app/main/default/objects/Sales_Order__c/fields/P_O_L_A_O_D__c.field-meta.xml
<CustomField>
    <fullName>P_O_L_A_O_D__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>P.O.L(A.O.D)</label>
    <referenceTo>PortCode__c</referenceTo>
    <relationshipName>SI</relationshipName>
    <type>Lookup</type>
</CustomField>