force-app/main/default/objects/Sales_Order__c/fields/Permission__c.field-meta.xml
<CustomField>
    <fullName>Permission__c</fullName>
    <label>Permission</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Prevent from creating job</fullName>
            </value>
            <value>
                <fullName>Not prevent from creating job</fullName>
            </value>
            <value>
                <fullName>Allow to create job</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>