force-app/main/default/objects/Sales_Order__c/fields/Place_of_Delivery__c.field-meta.xml
<CustomField>
    <fullName>Place_of_Delivery__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Place of Delivery</label>
    <referenceTo>PortCode__c</referenceTo>
    <relationshipName>SI4</relationshipName>
    <type>Lookup</type>
</CustomField>