force-app/main/default/objects/Sales_Order__c/fields/POD__c.field-meta.xml
<CustomField>
    <fullName>POD__c</fullName>
    <formula>P_O_D_A_O_A__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>POD</label>
    <type>Text</type>
</CustomField>