force-app/main/default/objects/Sales_Order__c/fields/POL__c.field-meta.xml
<CustomField>
    <fullName>POL__c</fullName>
    <formula>P_O_L_A_O_D__r.Name</formula>
    <label>POL</label>
    <type>Text</type>
</CustomField>