force-app/main/default/objects/Sales_Order__c/fields/Port_Code__c.field-meta.xml
<CustomField>
    <fullName>Port_Code__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Port Code</label>
    <referenceTo>PortCode__c</referenceTo>
    <relationshipName>SI3</relationshipName>
    <type>Lookup</type>
</CustomField>