force-app/main/default/objects/Sales_Order__c/fields/ProfitINCLTaxUSD__c.field-meta.xml
<CustomField>
    <fullName>ProfitINCLTaxUSD__c</fullName>
    <formula>TotalSellingInclTaxUSD__c -   TotalBuyingInclTaxUSD__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Profit INCL Tax (USD)</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>