force-app/main/default/objects/Sales_Order__c/fields/ProfitINCLTaxVND__c.field-meta.xml
<CustomField>
    <fullName>ProfitINCLTaxVND__c</fullName>
    <formula>TotalSellingInclTaxVND__c -   TotalBuyingInclTaxVND__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Profit INCL Tax (VND)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>