force-app/main/default/objects/Sales_Order__c/fields/ProfitNICTaxVND__c.field-meta.xml
<CustomField>
    <fullName>ProfitNICTaxVND__c</fullName>
    <formula>TotalAmountofSellingVND__c -  TotalAmountofBuyingVND__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Profit NIC Tax (VND)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>