force-app/main/default/objects/Sales_Order__c/fields/Quote_ID__c.field-meta.xml
<CustomField>
    <fullName>Quote_ID__c</fullName>
    <label>Quote ID</label>
    <referenceTo>Quote__c</referenceTo>
    <relationshipName>SI</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>