force-app/main/default/objects/Sales_Order__c/fields/Quote_route__c.field-meta.xml
<CustomField>
    <fullName>Quote_route__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Quote route</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>$Source.Quote_ID__c</field>
            <operation>equals</operation>
            <valueField>Quote_route__c.Quote__c</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Quote_route__c</referenceTo>
    <relationshipName>SI</relationshipName>
    <type>Lookup</type>
</CustomField>