force-app/main/default/objects/Sales_Order__c/fields/ShipmentConverted__c.field-meta.xml
<CustomField>
    <fullName>ShipmentConverted__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Shipment Converted</label>
    <type>Checkbox</type>
</CustomField>