force-app/main/default/objects/Sales_Order__c/fields/Shipper__c.field-meta.xml
<CustomField>
    <fullName>Shipper__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Shipper</label>
    <referenceTo>Account</referenceTo>
    <relationshipName>SI</relationshipName>
    <type>Lookup</type>
</CustomField>