force-app/main/default/objects/Sales_Order__c/fields/Total_Containers__c.field-meta.xml
<CustomField>
    <fullName>Total_Containers__c</fullName>
    <formula>ContainerQuantity1__c +  ContainerQuantity2__c  +  ContainerQuantity3__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Containers</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>