force-app/main/default/objects/Sales_Order__c/fields/TotalAmountofBuyingActual__c.field-meta.xml
<CustomField>
    <fullName>TotalAmountofBuyingActual__c</fullName>
    <label>Total Amount of Buying (Actual)</label>
    <summarizedField>Sales_Order_Line__c.TotalAmountofBuyingActual__c</summarizedField>
    <summaryForeignKey>Sales_Order_Line__c.SO_ID__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>