force-app/main/default/objects/Sales_Order__c/fields/TotalAmountofBuyingUSD__c.field-meta.xml
<CustomField>
    <fullName>TotalAmountofBuyingUSD__c</fullName>
    <label>Total Amount of Buying (USD)</label>
    <summarizedField>Sales_Order_Line__c.TotalAmountofBuyingFCY__c</summarizedField>
    <summaryForeignKey>Sales_Order_Line__c.SO_ID__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>