force-app/main/default/objects/Sales_Order__c/fields/TotalAmountofBuyingVND__c.field-meta.xml
<CustomField>
    <fullName>TotalAmountofBuyingVND__c</fullName>
    <label>Total Amount of Buying (VND)</label>
    <summarizedField>Sales_Order_Line__c.TotalAmountofBuyingLocal__c</summarizedField>
    <summaryForeignKey>Sales_Order_Line__c.SO_ID__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>