force-app/main/default/objects/Sales_Order__c/fields/TotalAmountofSellingActual__c.field-meta.xml
<CustomField>
    <fullName>TotalAmountofSellingActual__c</fullName>
    <label>Total Amount of Selling (Actual)</label>
    <summarizedField>Sales_Order_Line__c.TotalAmountofSellingActual__c</summarizedField>
    <summaryForeignKey>Sales_Order_Line__c.SO_ID__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>