force-app/main/default/objects/Sales_Order__c/fields/TotalAmountofSellingUSD__c.field-meta.xml
<CustomField>
    <fullName>TotalAmountofSellingUSD__c</fullName>
    <label>Total Amount of Selling (USD)</label>
    <summarizedField>Sales_Order_Line__c.TotalAmountofSellingFCY__c</summarizedField>
    <summaryForeignKey>Sales_Order_Line__c.SO_ID__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>