force-app/main/default/objects/Sales_Order__c/fields/TotalAmountofSellingVND__c.field-meta.xml
<CustomField>
    <fullName>TotalAmountofSellingVND__c</fullName>
    <label>Total Amount of Selling (VND)</label>
    <summarizedField>Sales_Order_Line__c.TotalAmountofSellingLocal__c</summarizedField>
    <summaryForeignKey>Sales_Order_Line__c.SO_ID__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>