force-app/main/default/objects/Sales_Order__c/fields/TotalBuyingInclTaxActual__c.field-meta.xml
<CustomField>
    <fullName>TotalBuyingInclTaxActual__c</fullName>
    <label>Total Buying Incl Tax (Actual)</label>
    <summarizedField>Sales_Order_Line__c.TotalBuyingInclTaxActual__c</summarizedField>
    <summaryForeignKey>Sales_Order_Line__c.SO_ID__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>