force-app/main/default/objects/Sales_Order__c/fields/TotalBuyingInclTaxUSD__c.field-meta.xml
<CustomField>
    <fullName>TotalBuyingInclTaxUSD__c</fullName>
    <label>Total Buying Incl Tax (USD)</label>
    <summarizedField>Sales_Order_Line__c.TotalBuyingInclTaxFCY__c</summarizedField>
    <summaryForeignKey>Sales_Order_Line__c.SO_ID__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>