force-app/main/default/objects/Sales_Order__c/fields/TotalBuyingInclTaxVND__c.field-meta.xml
<CustomField>
    <fullName>TotalBuyingInclTaxVND__c</fullName>
    <label>Total Buying Incl Tax (VND)</label>
    <summarizedField>Sales_Order_Line__c.TotalBuyingInclTaxLocal__c</summarizedField>
    <summaryForeignKey>Sales_Order_Line__c.SO_ID__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>