force-app/main/default/objects/Sales_Order__c/fields/TotalProfitActual__c.field-meta.xml
<CustomField>
    <fullName>TotalProfitActual__c</fullName>
    <formula>TotalSellingInclTaxActual__c -  TotalBuyingInclTaxActual__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Profit (Actual)</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>