force-app/main/default/objects/Sales_Order__c/fields/TotalSellingInclTaxActual__c.field-meta.xml
<CustomField>
    <fullName>TotalSellingInclTaxActual__c</fullName>
    <label>Total Selling Incl Tax (Actual)</label>
    <summarizedField>Sales_Order_Line__c.TotalSellingInclTaxActual__c</summarizedField>
    <summaryForeignKey>Sales_Order_Line__c.SO_ID__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>