force-app/main/default/objects/Sales_Order__c/fields/TotalSellingInclTaxUSD__c.field-meta.xml
<CustomField>
    <fullName>TotalSellingInclTaxUSD__c</fullName>
    <label>Total Selling Incl Tax (USD)</label>
    <summarizedField>Sales_Order_Line__c.TotalSellingInclTaxFCY__c</summarizedField>
    <summaryForeignKey>Sales_Order_Line__c.SO_ID__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>