force-app/main/default/objects/Sales_Order__c/fields/TotalSellingInclTaxVND__c.field-meta.xml
<CustomField>
    <fullName>TotalSellingInclTaxVND__c</fullName>
    <label>Total Selling Incl Tax (VND)</label>
    <summarizedField>Sales_Order_Line__c.TotalSellingInclTaxLocal__c</summarizedField>
    <summaryForeignKey>Sales_Order_Line__c.SO_ID__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>