force-app/main/default/objects/Sales_Order__c/fields/Transit_Port_VIA__c.field-meta.xml
<CustomField>
    <fullName>Transit_Port_VIA__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Transit Port (VIA)</label>
    <referenceTo>PortCode__c</referenceTo>
    <relationshipLabel>Sales Order (Transit Port (VIA))</relationshipLabel>
    <relationshipName>Sales_Order</relationshipName>
    <type>Lookup</type>
</CustomField>