force-app/main/default/objects/Sales_Order__c/fields/Valid_Date__c.field-meta.xml
<CustomField>
    <fullName>Valid_Date__c</fullName>
    <label>Valid Date</label>
    <type>Date</type>
</CustomField>