force-app/main/default/objects/Sales_Order__c/fields/Vessel_Flight__c.field-meta.xml
<CustomField>
    <fullName>Vessel_Flight__c</fullName>
    <label>Vessel/Flight</label>
    <length>255</length>
    <type>Text</type>
</CustomField>