force-app/main/default/objects/Sales_Order__c/fields/VesselID__c.field-meta.xml
<CustomField>
    <fullName>VesselID__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Vessel ID</label>
    <referenceTo>Vessel__c</referenceTo>
    <relationshipLabel>Sales Order</relationshipLabel>
    <relationshipName>Sales_Order</relationshipName>
    <type>Lookup</type>
</CustomField>