force-app/main/default/objects/Sales_Order__c/validationRules/POLPOD_Rule.validationRule-meta.xml
<ValidationRule>
    <fullName>POLPOD_Rule</fullName>
    <active>true</active>
    <errorConditionFormula>P_O_L_A_O_D__r.Name = P_O_D_A_O_A__r.Name</errorConditionFormula>
    <errorMessage>P.O.L (A.O.D) and P.O.L (A.O.A) must be different.</errorMessage>
</ValidationRule>